--- a/assets/css/reportico_bootstrap.css
+++ b/assets/css/reportico_bootstrap.css
@@ -52,11 +52,11 @@
 {
     float: right;
     font-weight: 700;
-    margin: 10px 5px 0px 0px;
-    border: 1px solid #888888;
+    margin: 0px 5px 0px 0px;
+    border: 0px solid #888888;
     text-decoration: none;
     background-color: #ffffff;
-    height: 32px !important;
+    height: 42px !important;
     cursor: pointer;
 }
 
@@ -86,7 +86,7 @@
 .swPrpCritExpandSel input
 {
     float: left;
-    margin: 10px 2px 0px 20px !important;
+    margin: 3px 2px 0px 20px !important;
     padding: 5px 2px 2px 2px !important;
     background: #ffffff;
     border: 5px solid #d0ccc9;
@@ -94,6 +94,10 @@
     position: relative;
     color: #505050;
     cursor: pointer;
+    background: url('../images/search.png') no-repeat;   
+    background-color: #ffffff;
+    height: 22px; 
+    width: 22px;
 }
 
 .swPrpTopMenuCell input {
@@ -280,6 +284,12 @@ div.modal-loading {
     text-decoration: none;
 }
 
+.reporticoSubmit:hover 
+{
+    background-color: #0f3e12 !important;
+    color: #fff !important;
+}
+
 .swMenuItemLink:hover 
 {
     background-color: inherit !important;
@@ -311,6 +321,19 @@ input.swAdminButton2
     margin-top: 8px;
     margin-left: 2px;
     margin-right: 2px;
+
+}
+
+.swAdminButton2:hover 
+{
+    background-color: #0f3e12 !important;
+    color: #fff !important;
+}
+
+.swLinkMenu2:hover 
+{
+    background-color: #0f3e12 !important;
+    color: #fff !important;
 }
 
 .swAdminButton 
@@ -521,9 +544,9 @@ input.swAdminButton2
 /* Style for Criteria Entry Screen Buttons */
 .swPrpSubmit
 { 
-    background-color: #EFEFEF;
+    /*background-color: #EFEFEF;
     border: 1px solid #d0ccc9;
-    color: #000000;
+    color: #000000;*/
     border-size: 0;
     text-align: center;
     margin-top: 4px;
@@ -725,8 +748,8 @@ input.swAdminButton2
 
 .swCSVBox, .swHTMLBox, .swPDFBox, .swPrintBox, .swXMLBox, .swJSONBox
 {
-    width: 30px !important;
-    height: 30px !important;
+    width: 42px !important;
+    height: 42px !important;
     text-align: left;
     padding: 0px;
     margin-bottom: 5px !important;
@@ -757,14 +780,11 @@ input.swAdminButton2
 }
 .swMiniMaintain { background-image: url(../images/icons/pencil-2x.png) !important; }
 
-.swRepRefreshBox,
-.swRepPrintBox,
-.swRepBackBox
+.swRepButtons
 {
-    width: 38px !important;
+    width: 100%;
     height: 38px;
     margin: 0px 0px 0px 0px;
-    float: left;
 }
 
 .swRepPrintBox .swLinkMenu,
@@ -779,9 +799,9 @@ input.swAdminButton2
     float: left;
 }
 
-.swRepPrintBox .swLinkMenu { height: 32px !important; background-image: url(../images/printer.png); }
-.swRepRefreshBox .swLinkMenu { height: 32px !important; background-image: url(../images/refreshbutton.png); }
-.swRepBackBox .swLinkMenu { height: 32px !important; background-image: url(../images/backbutton.png); }
+.swRepPrintBox .swLinkMenu { height: 32px !important; border: none; background-image: url(../images/printer.png); background-color: #ffffff;}
+.swRepRefreshBox .swLinkMenu { height: 32px !important; border: none; background-image: url(../images/refreshbutton.png); }
+.swRepBackBox .swLinkMenu { height: 32px !important; border: none; background-image: url(../images/backbutton.png); }
 
 .swRepBackButton:hover 
 {
@@ -980,7 +1000,7 @@ input.swAdminButton2
     padding: 5px;
     background-color: inherit;
     color: #555;
-    width: 220px !important;
+    width: 160px !important;
     text-align: left;
     
 }
@@ -992,17 +1012,19 @@ input.swAdminButton2
     padding: 5px;
     background-color: inherit;
     color: #555;
-    width: 220px !important;
+    width: 160px !important;
     text-align: left;
 }
 
 .swMntVertTabMenuCellSel
 { 
+    width: 215px !important;
 }
 
 .swMntVertTabMenuCellUnsel
 { 
     border: 1px solid #bbb;
+    width: 215px !important;
 }
 
 .swMntVertTabMenuCellSel a
